--- a/src/index.css
+++ b/src/index.css
@@ -3,16 +3,17 @@
 * {
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
-  color: rgba(52, 52, 52, 1);
-  caret-color: transparent;
+  color: rgb(0, 0, 0);
 }
 
 html {
   font-family: "Noto Sans JP", sans-serif;
-  background-color: #eeeeee;
   /* height: 300vh; */
 }
 
 body {
   margin: 0;
 }
+
+
+
