--- a/src/components/AddTask/AddTask.module.css
+++ b/src/components/AddTask/AddTask.module.css
@@ -8,6 +8,7 @@
   padding: 10px;
   margin-top: 2vh;
   position: fixed;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2);
 }
 form {
   width: 80%;
@@ -28,12 +29,13 @@ form {
 .button {
   width: 125px;
   height: 40px;
-  background: linear-gradient(90deg, #7c4eff 0%, #6db0ff 100%);
+  background: linear-gradient(90deg, #08ff52 0%, #00defc 100%);
   border-radius: 10px;
   border: none;
-  color: #ffffff;
+  color: #000000;
   float: right;
   margin-top: 5%;
+  margin-left: 100px;
   transition: 0.3s;
 }
 
@@ -41,6 +43,8 @@ form {
   background: linear-gradient(90deg, #5e3ac5 0%, #3577c6 100%);
   cursor: pointer;
 }
+
+
 
 .todo {
   display: inline;
