--- a/src/components/TasksList/TasksList.module.css
+++ b/src/components/TasksList/TasksList.module.css
@@ -7,6 +7,7 @@
   margin-right: 5%;
   margin-top: 2vh;
   text-align: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2);
 }
 
 .todo {
@@ -85,7 +86,7 @@ ul {
   margin-left: 5%;
   position: relative;
 
-  border: double 3px transparent;
+  border: double 5px transparent;
   border-radius: 25px;
   background-image: linear-gradient(
       rgba(238, 238, 238, 1),
@@ -93,9 +94,9 @@ ul {
     ),
     linear-gradient(
       to bottom,
-      rgba(255, 66, 54, 1),
-      rgba(109, 176, 255, 1),
-      rgba(124, 78, 255, 1)
+      rgb(0, 255, 128),
+      rgb(68, 196, 255),
+      rgb(255, 6, 81)
     );
   background-origin: border-box;
   background-clip: padding-box, border-box;
